[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/snake_tail.png" type="Texture" id=1]
[ext_resource path="res://game_scene/player/BodyPart.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 11.4109

[node name="BodyPart" type="Area2D"]
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
monitoring = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
script = ExtResource( 2 )

[node name="StraightSprite" type="Sprite" parent="."]
self_modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
scale = Vector2( 0.85, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PositionTween" type="Tween" parent="."]

[node name="RotationTween" type="Tween" parent="."]
